# tic-tac-toe-backend

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.dev.txt  requirements.prod.txt  ruff.toml  uv.toml
src/: main.py
src/configs/: logger.py  server.py
src/routers/: router.py
src/utilities/: common.py
src/utilities/msgspec/: response.py
